--- a/doc/desarrollo-problemas-introduccion.tex
+++ b/doc/desarrollo-problemas-introduccion.tex
@@ -1,1 +1,1 @@
-Describimos en esta sección cual es el procedimiento a seguir para desplegar en ECJ dos problemas bien conocidos en el mundo de la computación evolutiva. En primer lugar describimos como ejecutar el algoritmo genético MaxOne, y en segundo lugar el algoritmo de programación genética Parity. En ambos se hace inicialmente un despliegue que no hace uso de la integración con Hadoop y finalmente se explica como de una manera sencilla puede ser configurado para que la evaluación se haga de forma distribuida en un cluster Hadoop.
+Describimos en esta sección cual es el procedimiento a seguir para desplegar en ECJ dos problemas bien conocidos en el mundo de la computación evolutiva utilizando la integraci\'on con Hadoop. En primer lugar describimos como ejecutar el algoritmo genético MaxOne, y en segundo lugar el algoritmo de programación genética Parity. En ambos se hace inicialmente un despliegue que no hace uso de la integración con Hadoop y finalmente se explica como de una manera sencilla puede ser configurado para que la evaluación se haga de forma distribuida en un cluster Hadoop.
