--- a/doc/desarrollo-resultados-millones-individuos.tex
+++ b/doc/desarrollo-resultados-millones-individuos.tex
@@ -6,7 +6,7 @@ Para los problemas donde el coste de la evaluación es despreciable, la paraleli
   \begin{center}
     \begin{center}
     \begin{tabular}{l | c c c c}
-    N\'umero de individuos & Secuencial & 2 hilos & 4 hilos & 8 hilos \\ \hline
+    N\'umero de individuos & Secuencial (s) & 2 hilos (s) & 4 hilos (s) & 8 hilos (s) \\ \hline
     30.000 & 19 & 10 & 5 & 3\\
     50.000 & 31 & 16 & 8 & 4\\
     100.000 & 65 & 32 & 16 & 8\\
