--- a/doc/main.tex
+++ b/doc/main.tex
@@ -60,13 +60,13 @@
 		\input{desarrollo-ecj.tex}
 	\section{Estudio de Hadoop como herramienta de procesamiento masivo de informaci\'on	\label{desarrollo-hadoop}}
 		\input{desarrollo-hadoop.tex}
-	\section{Diagramas de dise\~no}
-		\input{desarrollo-diagramas.tex}
+	\section{Modelo de paralelizaci\'on}
+		\input{desarrollo-paralelizacion.tex}
 	\section{Implementaci\'on}
 		\input{desarrollo-implementacion.tex}
 	\section{Mejoras introducidas}
 		\input{desarrollo-problema-mejoras.tex}
-	\section{Despliegue de problemas utilizando la implementaci\'on}
+	\section{Despliegue de problemas utilizando la integraci\'on}
 		\input{desarrollo-problemas-introduccion.tex}
 		\subsection{MaxOne}
 			\input{desarrollo-problema-maxone.tex}
@@ -79,7 +79,7 @@
 			
 \chapter{Reconocimiento facial mediante algoritmos evolutivos masivamente paralelos}\label{facerecognition}
 	\input{problema-facerecognition-introduccion.tex}
-	\section{Modificación planteada: introducir evolución y paralelismo}
+	\section{Modificación planteada}
 		\input{problema-facerecognition-modificacion.tex}
 	\section{Resultados}
 		\input{problema-facerecognition-resultados.tex}
