--- a/doc/problema-facerecognition-modificacion.tex
+++ b/doc/problema-facerecognition-modificacion.tex
@@ -1,16 +1,74 @@
+Se proponen dos modificaciones al problema anterior: por un lado introducir evoluci\'on, para obtener los puntos de inter\'es de las im\'agenes que deben ser utilizados; por otro paralelizaci\'on, para reducir los tiempos de ejecuci\'on.
+
+\subsubsection{Evoluci\'on: ECJ}
+
 El sistema debe ser entrenado haciendo uso de una base de datos de imágenes en la que cada imagen est\'a caracterizada por unos puntos de interés. Todos estos puntos son analizados en la implementación descrita anteriormente. La modificación que se propone y es por esto que se plantea aquí, es la evolución de los puntos de interés a utilizar por el algoritmo, ya que puede ser que algunos de ellos caractericen las imagenes de mejor manera que otros o que algunos sirvan incluso para equivocar al sistema.
 
 La configuraci\'on de este problema en ECJ guarda mucha relación con el problema de MaxOne \verapartado{desarrollo-maxone}, ya que los individuos también estar\'an representados por una cadena de 0s y 1s que indican en este caso si se utiliza o no el punto de interés, por lo que prácticamente lo único que cambia es la evaluación de individuos la cual es radicalmente m\'as compleja y costosa. De este modo, si nuestra base de datos asigna a cada imagen 10 puntos de inter\'es, el genotipo de nuestros individuos consistir\'a en una cadena de 0s y 1s de una longitud de 10 caracteres, indicando cada uno de ellos si el punto de inter\'es correspondiente a esa posición se utiliza (tendr\'a valor 1) o no (valor 0). Lo anteriormente explicado se expresa en un ejemplo en la imagen del rostro donde se seleccionan algunos puntos de interés \ver{facerecognition-face-evol}.
 
 \figuraSinMarco{0.8}{imagenes/facerecognition-face-evol}{Ejemplo de individuo de la poblaci\'on}{facerecognition-face-evol}{}
 
-La evaluación de cada individuo consistirá en ejecutar el sistema de reconocimiento facial solo con los puntos que el genotipo del individuo indique que se deban utilizar, el fitness corresponderá al porcentaje de imágenes correctamente clasificadas en la fase de consulta.
+Podemos analizar la modificaci\'on planteada m\'as en profundidad si lo describimos siguiendo los pasos de un algoritmo evolutivo. Estos pasos se enumeran a continuaci\'on y tambi\'en se muestran graficamente en la siguiente imagen \ver{facerecog-evo}.
 
-Si tenemos en cuenta el tiempo que se tarda en la ejecución secuencial del algoritmo (4 minutos) y hacemos unas cuentas sencillas podemos ver que si tenemos una peque\~na población de 10 individuos, cada generación tardar\'a en ser evaluada unos cuarenta minutos, si queremos evolucionarlo necesitaremos quizás decenas o centenas de generaciones lo cual conllevar\'ia un tiempo impracticable. Es por esto que adem\'as de la integración con ECJ, haremos uso de la integración con Hadoop para distribuir y paralizar el proceso y así poder hacer que la evaluación de cada generación sea cuestión de pocos minutos. Los resultados obtenidos pueden ser consultados m\'as adelante en este documento \verapartado{resultados-facerecognition}.
+\figuraSinMarco{1}{imagenes/evolucion}{Fases de la evoluci\'on en el problema de reconocimiento facial}{facerecog-evo}{}
+
+\begin{enumerate}
+	\item \textbf{Inicializaci\'on}: se genera una poblaci\'on inicial de tama\~no configurable con individuos generados de forma aleatoria. Cada uno es representado por una cadena de 0s y 1s de longitud el n\'umero de puntos de inter\'es que contengan las im\'agenes de la base de datos a utilizar.
+	\item \textbf{Evaluaci\'on}: el c\'alculo de la aptitud de cada individuo consistirá en ejecutar el sistema de reconocimiento facial solo con los puntos que el genotipo del individuo indique que se deban utilizar, esto implica ejecutar tanto la fase de entrenamiento como la de consulta por cada individuo. La aptitud corresponderá al porcentaje de imágenes correctamente clasificadas en la fase de consulta. Todos estos trabajos se ejecutaran de forma paralela, esto se describe mejor en el siguiente punto donde se describe el modelo de paralelizaci\'on.
+	\item Con cada \textbf{generaci\'on} se siguen los siguientes pasos:
+	\begin{enumerate}
+		\item \textbf{Selecci\'on}: se escogen dos individuos. Para obtener cada uno de ellos se hace una seleeci\'on por torneo donde se elige aleatoriamente dos individuos, se comparan sus aptitudes y se escoge el mejor de los dos.
+		\item \textbf{Procreaci\'on}: la generaci\'on de nuevos individuos consiste en elegir un punto del genotipo de forma aleatoria que lo divida en dos partes e intercambiar estas partes entre los individuos elegidos. Esto genera dos nuevos individuos para la nueva poblaci\'on.
+		\item \textbf{Mutaci\'on}: de los individuos generados, con una probabilidad peque\~na, se modifica un gen en su genoma. El gen a modificar se elige de forma aleatoria.
+		\item \textbf{Evaluaci\'on}: ejecutar de nuevo con cada individuo el sistema de reconocimiento facial, ejecutando los diferentes trabajos de forma paralela.
+	\end{enumerate}
+\end{enumerate}
+
+\subsubsection{Paralelismo: Hadoop}
+
+\figuraSinMarco{1.1}{imagenes/fases-evaluacion-trabajo-por-ind}{Flujo de información cuando se utiliza un trabajo para cada individuo}{fases-evaluacion-trabajo-por-ind}{}
+
+Si tenemos en cuenta el tiempo que se tarda en la ejecución secuencial del algoritmo (4 minutos) y hacemos unas cuentas sencillas podemos ver que si tenemos una peque\~na población de 10 individuos, cada generación tardar\'a en ser evaluada unos cuarenta minutos, si queremos evolucionarlo necesitaremos quizás decenas o centenas de generaciones lo cual conllevar\'ia un tiempo impracticable. Es por esto que adem\'as de la integración con ECJ, haremos uso de la integración con Hadoop para distribuir y paralizar el proceso y así poder hacer que la evaluación de cada generación sea cuestión de pocos minutos.
+
+Como se ha comentado en la sección sobre la implementación de los problemas anteriores \verapartado{dos-modelos-para-dos-situaciones}, existe otro modelo que se puede llevar a cabo cuando la evaluación de cada uno de los individuos toma varios minutos y \'esta puede ser paralizada. \'Este es el caso del problema de reconocimiento facial que abordamos en este cap\'titulo en el que la evaluación de cada individuo puede tomar aproximadamente 4 minutos y consiste en aplicar un procesamiento a cada una de las imágenes de la base de datos de entrada, por lo que su paralelizaci\'on no se plantea muy complicada. Teniendo en cuenta esto, haremos uso de este modelo para la integraci\'on de este problema con Hadoop. La paralelizaci\'on se producirá a dos niveles ya que los trabajos se ejecutar\'an de manera simultánea y las tareas dentro de cada trabajo también. Anteriormente \ver{fases-evaluacion-trabajo-por-ind} se ha mostrado el flujo de información que se produce con esta implementación, ese diagrama puede ayudar a entender mejor las etapas que se llevan a cabo. 
+
+Pasamos a describir cada una de las etapas que se llevan a cabo en este modelo para la evaluaci\'on una poblaci\'on.
+
+\begin{itemize}
+	\item \textbf{Se crea un hilo de ejecucui\'on por cada individuo}, cada uno de los hilos de forma paralela realiza los siguientes pasos:
+	\begin{enumerate}
+		\item \textbf{Lanzar trabajo para el entrenamiento}, en primer lugar se lanza un trabajo de Hadoop que lleva a cabo la fase de entrenamiento del problema de reconocimiento facial utilizando como entrada la base de datos de im\'agenes. Para ello utiliza la fase Map (tantas tareas como grupos de la base de datos de im\'agenes) del trabajo para:
+		\begin{itemize}
+			\item Acondicionamiento de la imagen.
+			\item Pasar al espacio de color HSI.
+			\item Extracci\'on de caracter\'isticas.
+			\item Conformar el vector patr\'on caracter\'istico.
+		\end{itemize}
+		Y la de Reduce (solo una tarea) para:
+		\begin{itemize}
+			\item Normalizar los patrones.
+			\item Aplicar algortimo k-Means
+		\end{itemize}		
+		\item \textbf{Lanzar trabajo para la fase de consulta}, con los resultados de la fase de entrenamiento y la base de datos de im\'agenes de puede ejecutar este trabajo en Hadoop. Para ello utiliza la fase Map (tantas tareas como grupos de la base de datos de im\'agenes) del trabajo para:
+		\begin{itemize}
+			\item Acondicionamiento de la imagen.
+			\item Pasar al espacio de color HSI.
+			\item Extracci\'on de caracter\'isticas.
+			\item Conformar el vector patr\'on caracter\'istico.
+			\item Normalizar el patr\'on.
+		\end{itemize}
+		Y la de Reduce (solo una tarea) para:
+		\begin{itemize}
+			\item Aplicar algortimo k-NN.
+			\item Asignaci\'on de la clase (persona).
+		\end{itemize}		
+		\item \textbf{Asignaci\'on de resultados}, 
+	\end{enumerate}
+\end{itemize}
+
+Estos pasos se explica con m\'as detalle en la secci\'on siguiente.
 
 \subsection{Implementaci\'on} \label{problema-facerecognition-implementacion}
-
-Como se ha comentado en la sección sobre la implementación de los problemas anteriores \verapartado{dos-modelos-para-dos-situaciones}, existe otro modelo que se puede llevar a cabo cuando la evaluación de cada uno de los individuos toma varios minutos y \'esta puede ser paralizada. \'Este es el caso del problema de reconocimiento facial que abordamos en este cap\'titulo en el que la evaluación de cada individuo puede tomar aproximadamente 4 minutos y consiste en aplicar un procesamiento a cada una de las imágenes de la base de datos de entrada, por lo que su paralelizaci\'on no se plantea muy complicada. Teniendo en cuenta esto, haremos uso de este modelo para la integraci\'on de este problema con Hadoop. La paralelizaci\'on se producirá a dos niveles ya que los trabajos se ejecutar\'an de manera simultánea y las tareas dentro de cada trabajo también. Anteriormente \ver{fases-evaluacion-trabajo-por-ind} se ha mostrado el flujo de información que se produce con esta implementación, ese diagrama puede ayudar a entender mejor las etapas que se llevan a cabo.
 
 La entrada del trabajo de Hadoop estar\'a almacenada en el sistema de ficheros y estar\'a formada por la base de datos de imagenes. \'Esta ser\'a dividida y distribuida a lo targo del cluster para que las diferentes tareas que se ejecuten puedan acceder a ella.
 
