Documentacion: aplicadas sugerencias Paco

--- a/doc/agradecimientos.tex
+++ b/doc/agradecimientos.tex
@@ -1,5 +1,5 @@
 \agradecimientos{
-Quiero dar mi mas sincero agradecimiento a Don Francisco Fern\'andez de Vega, por haberme dirigido este proyecto de fin de grado. Gracias por su paciencia y por las horas que ha dedicado a este proyecto d\'andole vuelta a ideas y consiguiendo exitosamente mejorarlas. No puedo dejar de agradecer su incondicional apoyo a mi trabajo, intentando siempre impulsar mi carrera tan alto como sea posible.
+Quiero dar mi m\'as sincero agradecimiento a Don Francisco Fern\'andez de Vega, por haberme dirigido este proyecto de fin de grado. Gracias por su paciencia y por las horas que ha dedicado a este proyecto d\'andole vuelta a ideas y consiguiendo exitosamente mejorarlas. No puedo dejar de agradecer su incondicional apoyo a mi trabajo, intentando siempre impulsar mi carrera tan alto como sea posible.
 
 Tambi\'en he de agradecer a Don Francisco Ch\'avez de la O, codirector de \'este proyecto, sin su voluntad y ganas de trabajar no se hubiera podido alcanzar tan buenos resultados. Agradecer las atenciones, el tiempo que ha perdido conmigo en el despliegue de las herramientas y sobre todo por su apoyo t\'ecnico y moral durante nuestra estancia Mexicana.
 
