--- a/doc/analisis-evolutivos.tex
+++ b/doc/analisis-evolutivos.tex
@@ -13,7 +13,7 @@ Este modelo por tanto, se basa generalmente en la evolución de una población y
 \begin{itemize}
 	\item La población de individuos, donde cada una de ellos representa directa o indirectamente una solución al problema.
 	\item Aptitud de los individuos, atributo que describe cuanto de cerca est\'a este individuo (solución) de la solución \'optima. 
-	\item Procedimientos de selección, es la estrateg\'ia a seguir para elegir los progenitores de la siguiente generaci\'on. \'Esta normalmente elige a los individuos mas aptos, pero existen otras muchas técnicas.
+	\item Procedimientos de selección, es la estrateg\'ia a seguir para elegir los progenitores de la siguiente generaci\'on. \'Esta normalmente elige a los individuos m\'as aptos, pero existen otras muchas técnicas.
 	\item Procedimiento de transformaci\'on, se lleva a cabo sobre los individuos seleccionados y puede consistir en la combinación de varios individuos o en la mutación (cambios normalmente aleatorios en el individuo).
 \end{itemize}
 
