--- a/doc/conclusiones.tex
+++ b/doc/conclusiones.tex
@@ -1,14 +1,16 @@
-Abordamos en primer lugar los resultados obtenidos cuando la evaluaci\'on de los individuos tiene un coste despreciable \verapartado{resultados-parity}. Aunque en un principio los resultados obtenidos no consegu\'ian mejorar los tiempos de la implementaci\'on multihilo que trae implementado ECJ, estos se consiguieron mejorar tras una serie de mejoras en la implementaci\'on y en la configuraci\'on de Hadoop.
+Se marc\'o como objetivo del trabajo conseguir una integraci\'on que consiguiera llevar a cabo partes del proceso evolutivo en otro sistema que paralelice el trabajo y haga un uso eficiente de los recursos. Idealmente, se deben explotar lo m\'aximo posible los recursos de los que se dispongan. Concluimos a continuaci\'on si los resultados obtenidos demuestran el cumplimiento de los objetivos fijados al inicio del proyecto.
+
+En este trabajo hemos abordado primero problemas donde la evaluaci\'on de los individuos tiene un coste despreciable \verapartado{resultados-parity}. Aunque en un principio los resultados obtenidos no consegu\'ian mejorar los tiempos de la implementaci\'on multihilo que trae implementado ECJ, estos se consiguieron mejorar tras una serie de mejoras en la implementaci\'on y en la configuraci\'on de Hadoop.
 
 Los tiempos de la ejecuci\'on secuencial eran superados sin problemas con una cantidad de individuos relativamente peque\~na, en cambio si utilizamos los 8 núcleos de procesamiento que poseía la m\'aquina, debemos alcanzar el medio mill\'on de individuos para que el uso de Hadoop tenga sentido cuando ejecutamos problemas en los que el tiempo de evaluaci\'on es peque\~no. 
 
-Estas pruebas fueron realizadas con 6 m\'aquinas por lo que el uso de recursos hardware aumenta considerablemente con respecto a la soluci\'on multihilo, deber\'a ser el desarrollador quien decida cuando utilizar la soluci\'on proporcionada teniendo en cuanta los recursos hardware de los que disponga. No obstante, estas consideraciones cambian sustancialmente si la evaluaci\'on de los individuos es algo m\'as costosa, estas circunstancias se analizan mas adelante.
+Estas pruebas fueron realizadas con 6 m\'aquinas por lo que el uso de recursos hardware aumenta considerablemente con respecto a la soluci\'on multihilo, deber\'a ser el desarrollador quien decida cuando utilizar la soluci\'on proporcionada teniendo en cuanta los recursos hardware de los que disponga. No obstante, estas consideraciones cambian sustancialmente si la evaluaci\'on de los individuos es algo m\'as costosa, estas circunstancias se analizan m\'as adelante.
 
 \insertaraclaracion{Limitaci\'on multihilo}{
 La desventaja de la implementación multihilo que trae implementada ECJ, es que la ejecuci\'on se ve limitada a la cantidad de núcleos de procesamiento de una solo m\'aquina, pero si utilizamos la integración con Hadoop podemos utilizar todos los procesadores de cada una de las m\'aquinas que componen nuestro cluster.
 }
 
-El escenario cambia considerablemente si pasamos a considerar un problema donde la evaluaci\'on de los individuos sea mas costosa, este es el caso del problema de reconocimiento facial cuyos resultados se han mostrado anteriormente \verapartado{resultados-facerecognition}. 
+El escenario cambia considerablemente si pasamos a considerar un problema donde la evaluaci\'on de los individuos sea m\'as costosa, este es el caso del problema de reconocimiento facial cuyos resultados se han mostrado anteriormente \verapartado{resultados-facerecognition}. 
 
 En este caso la evaluaci\'on secuencial de cada individuo toma varios minutos, pero se realiz\'o una implementaci\'on paralela para reducir estos tiempos llegando a ejecutar el algoritmo en un 30\% del tiempo que toma la ejecuci\'on secuencial. Pero este no ha sido el \'unico beneficio de la integraci\'on con Hadoop, al poder ejecutar cada individuo en Hadoop estos pueden ser paralelamente evaluados por lo que se obtiene un beneficio sustancial respecto a una ejecuci\'on secuencial. 
 
