--- a/doc/manual-obtencion.tex
+++ b/doc/manual-obtencion.tex
@@ -1,10 +1,10 @@
 El primer paso para la utilización de la solución implementada, no puede ser otro que obtenerla. Con el fin de que la comunidad pueda conseguirla sin problema, se ha creado un repositorio p\'ublico desde donde se puede descargar.
 
-El repositorio est\'a localizado en la conocida p\'agina por los desarrolladores GitHub (\url{https://github.com}), en ella se encuentran numerosos proyectos de código abierto. Todos los proyectos almacenados en esta p\'agina hacen uso de una herramienta de control de versionado llamada Git, esta herramienta ha sido utilizada en este proyecto y su utilizaci\'on se explica mas adelante.
+El repositorio est\'a localizado en la conocida p\'agina por los desarrolladores GitHub (\url{https://github.com}), en ella se encuentran numerosos proyectos de código abierto. Todos los proyectos almacenados en esta p\'agina hacen uso de una herramienta de control de versionado llamada Git, esta herramienta ha sido utilizada en este proyecto y su utilizaci\'on se explica m\'as adelante.
 
 \insertaraclaracion{?`Qu\'e es Git?}{
 	\qquad Es un software de control de versiones diseñado por Linus Torvalds, pensando en la eficiencia y la confiabilidad del mantenimiento de versiones de aplicaciones cuando estas tienen un gran número de archivos de código fuente. Hay algunos proyectos de mucha relevancia que ya usan Git, en particular, el grupo de programación del núcleo Linux.
-	\qquad Algunas de sus características mas destacadas son:
+	\qquad Algunas de sus características m\'as destacadas son:
 	\begin{itemize}
 		\item Fuerte apoyo al desarrollo no lineal, por ende rapidez en la gestión de ramas y mezclado de diferentes versiones.
 		\item Gestión distribuida. Git le da a cada programador una copia local del historial del desarrollo entero, y los cambios se propagan entre los repositorios locales. 
