--- a/doc/prologo.tex
+++ b/doc/prologo.tex
@@ -1,9 +1,9 @@
 \prologo{
 En las primeras l\'ineas que describen este proyecto fin de grado, explicamos como se ha realizado la integraci\'on entre dos herramientas bien conocidas por la comunidad, ECJ y Hadoop.
 
-El hecho de mi inter\'es por tecnolog\'ias Big Data y el estar trabajando con investigadores inmersos en la computaci\'on evolutiva, provoc\'o la idea de la uni\'on de ambos campos de conocimiento. Hemos compartido muchas conversaciones donde intent\'abamos refinar la idea, eligiendo las herramientas a integrar, el modo en el que lo hacíamos, mejoras, cambios, etc. Estas conversaciones consegu\'ian mantenernos cada vez mas inmersos e inquietos con el proyecto.
+El hecho de mi inter\'es por tecnolog\'ias Big Data y el estar trabajando con investigadores inmersos en la computaci\'on evolutiva, provoc\'o la idea de la uni\'on de ambos campos de conocimiento. Hemos compartido muchas conversaciones donde intent\'abamos refinar la idea, eligiendo las herramientas a integrar, el modo en el que lo hacíamos, mejoras, cambios, etc. Estas conversaciones consegu\'ian mantenernos cada vez m\'as inmersos e inquietos con el proyecto.
 
-Las estancias que hemos realizado con otros grupos de investigaci\'on, en este caso Mexicanos, o algunos de los estudiantes que han venido al centro, han aportado valor al proyecto. Las ideas propuestas por las personas con las que se ha compartido la idea han sido tenidas muy en cuenta. Deducimos fácilmente como la colaboraci\'on entre diferentes grupos o personas no puede mas que aportar buenas ideas a un proyecto.
+Las estancias que hemos realizado con otros grupos de investigaci\'on, en este caso Mexicanos, o algunos de los estudiantes que han venido al centro, han aportado valor al proyecto. Las ideas propuestas por las personas con las que se ha compartido la idea han sido tenidas muy en cuenta. Deducimos fácilmente como la colaboraci\'on entre diferentes grupos o personas no puede m\'as que aportar buenas ideas a un proyecto.
 
 Aunque no alcanzados todos los objetivos deseados, ya que no dejan de surgir ideas, los resultados obtenidos sugieren que el tiempo dedicado ha merecido la pena.
 }
