Documentacion: pequenas correcciones

--- a/doc/agradecimientos.tex
+++ b/doc/agradecimientos.tex
@@ -1,13 +1,13 @@
 \agradecimientos{
-Quiero dar mi m\'as sincero agradecimiento a Don Francisco Fern\'andez de Vega, por haberme dirigido este proyecto de fin de grado. Gracias por su paciencia y por las horas que ha dedicado a este proyecto d\'andole vuelta a ideas y consiguiendo exitosamente mejorarlas. No puedo dejar de agradecer su incondicional apoyo a mi trabajo, intentando siempre impulsar mi carrera tan alto como sea posible.
+Quiero dar mi m\'as sincero agradecimiento a Francisco Fern\'andez de Vega, por haberme dirigido este proyecto de fin de grado. Gracias por su paciencia y por las horas que ha dedicado a este proyecto d\'andole vuelta a ideas y consiguiendo exitosamente mejorarlas. No puedo dejar de agradecer su incondicional apoyo a mi trabajo, intentando siempre impulsar mi carrera tan alto como sea posible.
 
-Tambi\'en he de agradecer a Don Francisco Ch\'avez de la O, codirector de \'este proyecto, sin su voluntad y ganas de trabajar no se hubiera podido alcanzar tan buenos resultados. Agradecer las atenciones, el tiempo que ha perdido conmigo en el despliegue de las herramientas y sobre todo por su apoyo t\'ecnico y moral durante nuestra estancia Mexicana.
+Tambi\'en he de agradecer a Francisco Ch\'avez de la O, codirector de \'este proyecto, sin su voluntad y ganas de trabajar no se hubiera podido alcanzar tan buenos resultados. Agradecer las atenciones, el tiempo que ha perdido conmigo en el despliegue de las herramientas y sobre todo por su apoyo t\'ecnico y moral durante nuestra estancia Mexicana.
 
 A los miembros del laboratorio EvoVisi\'on de CICESE (Ensenada, M\'exico), en especial al Doctor Gustavo Olague y a algunos de sus estudiantes, Eddie y Daniel. Durante la estancia en su laboratorio fuimos especialmente acogidos, all\'i se desarroll\'o parte del proyecto y ellos tuvieron especial inter\'es proponiendo ideas.
 
 A los miembros del instituto tecnol\'ogico de Tijuana (M\'exico), teniendo especial atenci\'on con el Doctor Leonardo Trujillo y algunos de sus alumnos, Enrique y Yuliana, que consiguieron hacer de la estancia una experiencia muy placentera y productiva, mostrando su interés por el proyecto y a\~nadi\'endole valor.
 
-A mi jefe y compa\~neros de trabajo en el CERN, los cuales han sido suficientemente flexibles para que pueda dedicarle alguna que otra hora de trabajo al proyecto, sin duda sin este tiempo no podr\'ia haberse llevado a cabo.
+A mi jefe, Zbigniew Baranowski, y compa\~neros de trabajo en el CERN, Maciej Grybek y Kacper Stanislaw, los cuales han sido suficientemente flexibles para que pueda dedicarle alguna que otra hora de trabajo al proyecto, sin duda sin este tiempo no podr\'ia haberse llevado a cabo.
 
 A C\'esar Benavides, sin el cual no podr\'ia haberse realizado la integraci\'on del proyecto de reconocimiento facial. Agradecerle el haber hecho su implementaci\'on compatible con las necesidades del proyecto y el tiempo perdido en nuestras continuas reuniones virtuales.
 
