--- a/doc/analisis-procesamiento-masivo.tex
+++ b/doc/analisis-procesamiento-masivo.tex
@@ -12,6 +12,6 @@ Por tanto, la computaci\'on distribuida es la \'unica soluci\'on con el hardware
 
 En este \'ambito, surge la necesidad de dise\~nar herramientas que puedan no solo mantener esta informaci\'on, si no también que tengan la capacidad de analizarla y extraer el valor que se desea de una forma distribuida y con un modelo sencillo. 
 
-\textit{Google}, el buscador de internet m\'as utilizado en el mundo, ha hecho frente ha este problema antes que nadie ya que desde hace a\~nos maneja cantidades de información realmente grandes, es por esto que sus investigaciones y experiencia son avanzadas. Varios a\~nos atrás hicieron p\'ublica \cite{paper-mapreduce} una solución para el an\'alisis de grandes cantidades de datos de forma distribuida y con un modelo que da soluci\'on a la complejidad de dividir el problema para poder paralelizarlo, ha este modelo se le conoce como Map/Reduce. Esta publicación ha dado pie a que se implemente una herramienta que se conoce con el nombre de Hadoop \cite{hadoop}, la cual se describe con m\'as detalle en un cap\'itulo posterior \verapartado{desarrollo-hadoop}. La creaci\'on de esta herramienta y el hecho de que se hayan obtenidos buenos resultados de ella, ha provocado que surjan otras muchas herramientas a su alrededor, las cuales ayudan a diferentes tareas como el volcado de información (Sqoop), bases de datos para consulta (Impala), gestion de flujos de datos (Flume) y otras muchas.
+\textit{Google}, el buscador de internet m\'as utilizado en el mundo, ha hecho frente a este problema antes que nadie ya que desde hace a\~nos maneja cantidades de información realmente grandes, es por esto que sus investigaciones y experiencia son avanzadas. Varios a\~nos atrás hicieron p\'ublica \cite{paper-mapreduce} una solución para el an\'alisis de grandes cantidades de datos de forma distribuida y con un modelo que da soluci\'on a la complejidad de dividir el problema para poder paralelizarlo, a este modelo se le conoce como Map/Reduce. Esta publicación ha dado pie a que se implemente una herramienta que se conoce con el nombre de Hadoop \cite{hadoop}, la cual se describe con m\'as detalle en un cap\'itulo posterior \verapartado{desarrollo-hadoop}. La creaci\'on de esta herramienta y el hecho de que se hayan obtenidos buenos resultados de ella, ha provocado que surjan otras muchas herramientas a su alrededor, las cuales ayudan a diferentes tareas como el volcado de información (Sqoop), bases de datos para consulta (Impala), gestion de flujos de datos (Flume) y otras muchas.
 
 La propuesta de computación distribuida que se hace en esta publicación, hace uso de un modelo computacional anteriormente conocido en la programación funcional. Este modelo se basa en aplicar dos funciones básicas conocidas como Map (mapeo) y Reduce (reducci\'on). La función de mapeo consiste en aplicar una transformación o procedimiento a todos los datos, obteniendo así la entrada de la siguiente fase, reducción, la cual consiste en ''resumir", aplicando la misma función a diferentes partes de la salida de la fase de mapeo, obteniendo finalmente la salida deseada. Numerosas fases de mapeo y reducción pueden ser concatenadas en el orden que se quiera con el fin de producir el resultado esperado. Este modelo es el implementado en Hadoop pero con algunas peculiaridades \verapartado{desarrollo-hadoop-implementacion-modelo}.
